cmake_minimum_required(VERSION 3.26)
project(lista_01 C)

set(CMAKE_C_STANDARD 11)

add_executable(lista_01
        ex-03.c
        ex-4.c
        ex-5.c
        ex-6.c
        ex-8.c
        ex-7.c
        ex-9.c
        ex-10.c
        ex-11.c
        ex-12.c
        ex-13.c
        ex-14.c
        ex-15.c
        ex-16.c
        ex-17.c
        ex-18.c
        ex-19.c
        ex-22.c
        ex-25.c
        ex-1.c)
